[package]
name = "sae"
version = "0.1.0"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
edition = "2018"
description = "A test optimization problem for SAE Formula Cars"
readme = "README.md"
repository = "https://github.com/cmccomb/sae"
homepage = "https://github.com/cmccomb/sae"
documentation = "https://docs.rs/sae"
license = "MIT OR Apache-2.0"
keywords = ["sae", "engineering", "optimization"]
categories = ["science", "simulation"]

[dependencies]
argmin = "0.4.3"
rand = "0.8.3"
rand_distr = "0.4.0"